# simple-anomaly-detector

./: CMakeLists.txt  CMakePresets.json  main.cpp  pipeline.cpp  pipeline.h  report.cpp  report.h  test.cpp
